--- a/responsive.css
+++ b/responsive.css
@@ -21,11 +21,9 @@
 
 @media only screen and (max-width: 768px) {
     .fromBlock.form-group.d-sm-flex.mb-2 {
-        display: block !important;
+        display: flex;
     }
-    .fromBlock.form-group.d-sm-flex.mb-2 .formMargin{
-        margin: 8px 0;
-    }
+
     
     .headerLogo img {
         width: 80px;
@@ -78,9 +76,43 @@
 }
 
 @media only screen and (max-width: 468px){
+    .headerLogo img {
+        width: 60px;
+        margin-top: 15px;
+    }
+    .headerContent h1 {
+        font-size: 18px;
+        margin-top: 20px;
+    }
+    .headerLogoTwo img {
+        width: 35px;
+        margin-top: 5px;
+    }
     .overflowTop {
-        margin-top: -550px;
-        padding: 25px 20px;
+        margin-top: -625px;
+        padding: 15px 15px;
+      
+    }
+    .formText h1 {
+        font-size: 25px;
+    }
+    .formText p {
+        font-size: 18px;
+        
+    }
+    .btn {
+        padding: 5px 20px;
+        font-size: 16px;
+    }
+    .form-control, .form-select {
+        padding: 3px 15px;
+    }
+    .form-group.sideBySide {
+        display: flex;
+       
+    }
+    .form-group.sideBySide input{
+        margin-right: 3px;
     }
     .headerContent.headerContentTwo.mt-3 {
       
