--- a/responsive.css
+++ b/responsive.css
@@ -23,7 +23,18 @@
     .fromBlock.form-group.d-sm-flex.mb-2 {
         display: flex;
     }
-
+    select.form-select {
+        margin-bottom: 10px;
+    }
+    select.form-select.formMargin {
+        margin: 0;
+    }
+    select.form-select.sideBySide.formMargin {
+        margin-bottom: 10px;
+    }
+    input.form-control.mb-3 {
+        margin-bottom: 10px !important;
+    }
     
     .headerLogo img {
         width: 80px;
