--- a/responsive.css
+++ b/responsive.css
@@ -93,6 +93,9 @@
         margin-bottom: 10px !important;
     }
    
+    .mRight{
+        margin-right: 5px;
+    }
     .formWrapper {
         margin-bottom: 25px;
     }
